<resources>
    <string name="app_name">SYMC-ZG</string>
    <string name="err_code_0"></string>
    <string name="err_code_1"></string>
    <string name="err_code_2">禁止支腿动作</string>
    <string name="err_code_3">发动机测速故障</string>
    <string name="err_code_4">机械式编码器故障</string>
    <string name="err_code_5">旋转左限位</string>
    <string name="err_code_6">旋转右限位</string>
    <string name="err_code_7">驾驶室干涉</string>
    <string name="err_code_8">横向角度过大，不能调平</string>
    <string name="err_code_9">油温过高</string>
    <string name="err_code_10"></string>
    <string name="err_code_11">纵向角度过大，不能调平</string>
    <string name="err_code_12">电子水平仪故障</string>
    <string name="err_code_13"></string>
    <string name="err_code_14"></string>
    <string name="err_code_15"></string>
    <string name="err_code_16">臂架倾角传感器故障</string>
    <string name="err_code_17">2臂臂架干涉</string>
    <string name="err_code_18">3臂臂架干涉</string>
    <string name="err_code_19"></string>
    <string name="err_code_20">附具连杆干涉</string>
    <string name="err_code_21">水炮未缩到位</string>
    <string name="err_code_22">紧急停止</string>
    <string name="err_code_23">底盘超速</string>
    <string name="err_code_24"></string>
    <string name="err_code_25"></string>
    <string name="err_code_26"></string>
    <string name="err_code_27"></string>
    <string name="err_code_28"></string>
    <string name="err_code_29">压力传感器故障</string>
    <string name="err_code_30"></string>
    <string name="err_code_31">分动箱润滑油压力低</string>
    <string name="err_code_32">温度传感器故障</string>
    <string name="err_code_33"></string>
    <string name="err_code_34"></string>
    <string name="err_code_35"></string>
    <string name="err_code_36">支腿离地故障</string>
    <string name="err_code_37">稳定受限，谨防倾翻</string>
    <string name="err_code_38">1臂展开角度偏小，限制旋转角度</string>
    <string name="err_code_39">偏离零位角度过大，禁止1臂下压</string>
    <string name="err_code_40"></string>
    <string name="err_code_41"></string>
    <string name="err_code_42"></string>
    <string name="err_code_43"></string>
    <string name="err_code_44"></string>
    <string name="err_code_45"></string>
    <string name="err_code_46"></string>
    <string name="err_code_47"></string>
    <string name="err_code_48"></string>
    <string name="log_info">日志消息</string>
    <string name="title_close">关闭</string>
    <string name="not_started">未启动</string>
    <string name="started">启动</string>
    <string name="scram">急停</string>
    <string name="stop">停止</string>
    <string name="arm_spread">自动展</string>
    <string name="arm_shrink">自动收</string>
    <string name="arm_none"> </string>
    <string name="modify_input_password">输入密码</string>
    <string name="go_setting">设置</string>
    <string name="go_es_fileManager">ES文件管理器</string>
    <string name="randon_code">随机码</string>
    <string name="password_code">密  码</string>
    <string name="cancle">取消</string>
    <string name="button_confirm">确定</string>
    <string name="shut_stop">已关闭急停</string>
</resources>
