<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:background="@android:color/transparent"
    >

    <LinearLayout
        android:id="@+id/setModifyLayout"
        android:layout_width="500dp"
        android:layout_height="350dp"
        android:layout_marginLeft="85dp"
        android:layout_marginRight="85dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/shape_llayout_bg"
        android:visibility="visible"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/modify_input_password"
            android:textColor="@color/black"
            android:textSize="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="25dp"
            android:background="@color/divider_color"
            android:orientation="horizontal"></LinearLayout>

        <LinearLayout
            android:id="@+id/cbLLayout"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:gravity="center"
            android:visibility="visible"
            android:orientation="horizontal">


            <RadioGroup
                android:id="@+id/videoRadioGroup"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                >
                <RadioButton
                    android:id="@+id/cbSetting"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:textColor="@color/right_mid_txt"
                    android:textSize="18dp"
                    android:text="@string/go_setting"
                    android:checked="true"
                    />
                <RadioButton
                    android:id="@+id/cbFileManager"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:textColor="@color/right_mid_txt"
                    android:textSize="18dp"
                    android:text="@string/go_es_fileManager"
                    />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/randCodeLLayout"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:visibility="visible"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:text="@string/randon_code"
                android:textColor="@color/black"
                android:textSize="18dp"
                />

            <TextView
                android:id="@+id/tvRandomCode"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:text="5201"
                android:textSize="18dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:layout_gravity="center"
                android:text="@string/password_code"
                android:textColor="@color/black"
                android:textSize="18dp"
                />

            <!--android:background="@android:color/background_light"-->
            <EditText
                android:id="@+id/etPassCode"
                android:layout_width="180dp"
                android:layout_height="35dp"
                android:paddingLeft="10dp"
                android:gravity="left|center"
                android:layout_gravity="center"
                android:inputType="number"
                android:background="@drawable/shape_edit_bg"
                android:hint="请输入密码"
                android:textColor="@color/black"
                android:textSize="18dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPassClose"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:background="@drawable/shape_text_close"
                android:gravity="center"
                android:layout_gravity="bottom"
                android:text="@string/cancle"
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/tvPassConfirm"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/shape_text_close"
                android:gravity="center"
                android:layout_gravity="bottom"
                android:text="@string/button_confirm"
                android:textColor="@color/black"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>






